# Comet

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: cli.rs  main.rs
src/cli/: changelog.rs  commit.rs  init.rs  mod.rs  stats.rs
src/commands/: changelog.rs  commit.rs  init.rs  mod.rs  stats.rs
src/config/: default.rs  loader.rs  mod.rs  schema.rs
src/config/templates/: conventional.rs  minimal.rs  mod.rs
src/git/: commit.rs  mod.rs  repository.rs  status.rs
src/ui/: commit.rs  mod.rs
