[package]
name = "git-cmt"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for generating consistent commit messages using the Conventional Commits standard"
license = "MIT OR Apache-2.0"
authors = ["Alexander Dernild <alex@dernild.dk>"]
repository = "https://github.com/adernild/comet"
keywords = ["git", "commit", "conventional-commits", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-cmt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.4"
inquire = { version = "0.9.4", features = ["editor"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.27.0"
textwrap = "0.16.2"
toml = "1.0.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
